manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-example-ingress
  namespace: nginx-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argo.k8s-iigprod.com
    http:
      paths:
      - path: /nginx-example
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
